# puppetlabs

./: .gitignore  .mcp.json  CLAUDE.md  PHASE0_SUMMARY.md  PHASE_2_BLUEPRINT.md  PHASE_2_IMPLEMENTATION_GUIDE.md  PHASE_2_STATUS.md  README.md  SECURITY_FIXES.md  SECURITY_THREAT_MODEL.md  START_HERE.md  VALIDATION_ARCHITECTURE.md  VALIDATION_BUG_REPORT.md  VALIDATION_COMPLETE_V2.md  VALIDATION_FRAMEWORK.md  VALIDATION_INDEX.md  VALIDATION_README.md  VALIDATION_STATUS.md  VALIDATION_SYSTEM_COMPLETE.md  pyproject.toml  requirements.txt  sitecustomize.py
.claude/: .mcp.json  aliases.sh  settings.json
.claude/agents/: architect.md  code-reviewer.md  refactorer.md  test-harness.md
.claude/commands/: architect.md  debug.md  explain.md  review.md  ship.md  surgery.md  tests.md
config/: model_slots.yaml
docs/: ARCHITECTURE.md  PHASE1_VALIDATION_RESULTS.md  QUINTET_ULTRA_MODE_REPLICATOR.md  phase0_causal_loop.md
labs/: hello.py
quintet/: __init__.py  cli.py
quintet/builder/: __init__.py  api.py  detector.py  executor.py  specification.py  types.py  ultra_mode.py
quintet/causal/: __init__.py  dataset.py  experiment_hooks.py  experiment_registry.py  policy_receipts.py  receipt_persistence.py  validation_receipts.py
quintet/core/: __init__.py  confidence.py  constitutional.py  council.py  debate.py  probabilistic_detector.py  router.py  self_healing.py  types.py
quintet/math/: __init__.py  detector.py  executor.py  explainer.py  llm_integration.py  math_mode.py  parser.py  planner.py  robustness.py  types.py  validator.py
quintet/model/: __init__.py  backends.py  config.py  factory.py  policy.py  router.py  types.py
quintet/security/: __init__.py  input_sanitizer.py
quintet/stress/: __init__.py  coverage.py  decorator.py  edge_cases.py  executor.py  promotion.py  pytest_plugin.py  scenario.py
quintet/validation/: __init__.py  phase1.py  phase2.py  types.py
scripts/: check_invariants.py  demo_promotion_loop.py  validate_phase_1.py  validate_phase_1_cli.py  validate_phase_2_cli.py
tests/: conftest.py  test_confidence_split.py  test_constitutional_enforcement.py  test_experiment_hooks.py  test_integration.py  test_math_tier1.py  test_model_fabric.py  test_policy_receipts.py  test_qa_hardening.py  test_real_problem_validation.py  test_real_problem_validation_README.md  test_robustness.py  test_security.py  test_self_healing.py
(+17 files in other folders)
